welcome.lessons.welcome.array.array667.Array667.scala.error
array667:5: error: type mismatch;
 found   : Boolean(true)
 required: Int
					{return true}}}
                                                ^array667:6: error: type mismatch;
 found   : Boolean(false)
 required: Int
	return false
               ^