welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
	for (i <- 0 to nums.length -2)
		{ if (nums(i)==3)
			{ if (nums(i+1)==6 || nums(i+1)==7)
					{return true}}}
	return false
}
